# rust-derive-builder

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  Readme.md  build.rs  index.html  rustfmt.toml  search-index.js  vision_doc.md
.github/workflows/: build.yml  compiletests.yml  style.yml
derive-builder-test/: Cargo.toml  README.md
derive-builder-test/src/: lib.rs
derive-builder-test/tests/: attributes.rs  basic_setters.rs  builder_name.rs  empty_struct.rs  generic_structs.rs  immutable.rs  lifetime.rs  multiple_derives.rs  mutable.rs  owned.rs  private_setters.rs  setter_pattern.rs  setter_prefix.rs  setter_visibility.rs
derive_builder/: API-REFERENCE.md  CHANGELOG.md  Cargo.toml  README.md  README.md.skt.md  build.rs  index.html
derive_builder/examples/: builder_function_for_the_struct.rs  channel.rs  custom_constructor.rs  custom_defaults.rs  custom_error.rs  custom_error_generic.rs  deny_missing_docs.rs  doc_example.rs  post_build.rs  private_fields.rs  readme_example.rs  try_setter.rs  validation.rs  validator_fn.rs
derive_builder/src/: error.rs  lib.rs
derive_builder/src/options/: darling_opts.rs  field_mode.rs  field_options.rs  mod.rs  struct_darling.rs  struct_mode.rs  struct_options.rs
derive_builder/tests/: bounds_generation.rs  build_fn.rs  builder_field_custom.rs  builder_into.rs  builder_name.rs  compiletests.rs  custom_default.rs  deprecation_note.rs  derive_trait.rs  generic_structs.rs  generic_with_default.rs  lifetime.rs  manual_clone.rs  post_build.rs  setter_custom.rs  setter_extend.rs  setter_into.rs  setter_name.rs  setter_pattern.rs  setter_prefix.rs  setter_strip_option.rs  setter_visibility.rs  skeptic.rs  skip-setter.rs  sub_builder.rs  try_from.rs  try_setter.rs  validation.rs  validator_fn.rs
derive_builder/tests/compile-fail/: build_fn_error.stderr  builder_field_attrs.rs  builder_field_attrs.stderr  builder_field_custom.rs  builder_field_custom.stderr  builder_setter_attr.stderr  builder_setter_attrs.rs  builder_setter_attrs.stderr  crate_root.stderr  custom_error_generic_missing_bound.stderr  custom_error_no_from.stderr  custom_error_no_post_build.rs  deny_empty_default.rs  deny_empty_default.stderr  private_build_fn.rs  private_build_fn.stderr  private_builder.rs  private_builder.stderr  rename_setter_struct_level.rs  rename_setter_struct_level.stderr  suppress_derive_clone.rs  suppress_derive_clone.stderr  vis_conflict.stderr
derive_builder/tests/dummy-crate/: Cargo.toml
derive_builder/tests/dummy-crate/src/: lib.rs
derive_builder/tests/run-pass/: attributes.rs  custom_types.rs  deprecate_setter_prefix_syntax.rs  deprecate_struct-level_default.rs  empty_struct.rs  multiple_derives.rs  no_std.rs
derive_builder_core/: CHANGELOG.md  Cargo.toml  README.md
derive_builder_core/src/: bindings.rs  block.rs  build_method.rs  builder.rs  builder_field.rs  change_span.rs  default_expression.rs  deprecation_notes.rs  doc_comment.rs  error.rs  field_default_value.rs  initializer.rs  lib.rs  log_disabled.rs  macro_options.rs  options.rs  parsed_literal.rs  setter.rs  tokens.rs  try_from.rs
derive_builder_core/src/macro_options/: darling_opts.rs  diagnostic.rs  mod.rs
derive_builder_macro/: CHANGELOG.md  Cargo.toml  README.md
derive_builder_macro/src/: lib.rs  log_disabled.rs
derive_builder_macro/src/options/: darling_opts.rs  field_mode.rs  field_options.rs  macros.rs  mod.rs  struct_mode.rs  struct_options.rs
derive_builder_no_alloc_tests/: Cargo.toml
derive_builder_no_alloc_tests/src/: lib.rs
derive_builder_no_std_tests/: Cargo.toml
derive_builder_no_std_tests/src/: lib.rs  main.rs
derive_builder_test/: Cargo.toml
derive_builder_test/src/: lib.rs
derive_builder_test/tests/: compiletests.rs  try_setter.rs
derive_builder_test/tests/run-pass/: custom_types.rs  deprecate_struct-level_default.rs  deprecation_test.rs  no_std.rs  try_setter.rs
dev/: README.md  checkfeatures.sh  checkminimumrust.sh  compiletests.sh  deploy.sh  githook.sh  nightlytests.sh  publish.sh  stylechecks.sh  travis-run-all.sh
examples/: channel.rs  deny_missing_docs.rs  deprecation_test.rs  doc_example.rs  missing_docs.rs  readme_example.rs
src/: deprecation_notes.rs  derive_builder.rs  lib.rs  options.rs  parse_struct.rs
src/derive_builder/src/: derive_builder.rs.html  lib.rs.html  parse_struct.rs.html
src/doc_tpl/: builder_method.md  builder_struct.md  mod.rs
src/options/: field_mode.rs  mod.rs  struct_options.rs
tests/: annotations.rs  attributes.rs  basic_setters.rs  builder_name.rs  compiletests.rs  custom_result.rs  custom_types.rs  empty_struct.rs  generic_structs.rs  lib.rs  lifetime.rs  setter_prefix.rs  setter_visibility.rs  skeptic.rs  skip-setter.rs
testsuite/: Cargo.toml
testsuite/dummy-crate/: Cargo.toml
testsuite/dummy-crate/src/: lib.rs
testsuite/examples/: channel.rs  custom_defaults.rs
testsuite/no_std/: Cargo.toml
testsuite/no_std/tests/: no_std.rs
testsuite/tests/: builder_name.rs  compiletests.rs  custom_default.rs  generic_structs.rs  no_std  setter_into.rs
testsuite/tests/compile-fail/: private_fields.rs
testsuite/tests/dummy-crate/: Cargo.toml
testsuite/tests/run-pass/: deprecate_setter_prefix_syntax.rs
