[package]
name = "derive_builder"
version = "0.2.1"
authors = ["Colin Kiegel <kiegel@gmx.de>",
           "Pascal Hertleif <killercup@gmail.com>",
           "Jan-Erik Rediger <janerik@fnordig.de>"]

description = "Rust macro to automatically implement the builder pattern for arbitrary structs."
repository = "https://github.com/colin-kiegel/rust-derive-builder"
documentation = "https://docs.rs/derive_builder"

license = "MIT/Apache-2.0"
keywords = ["derive", "macro", "builder", "setter", "struct"]
readme = "README.md"

[lib]
proc-macro = true

[features]
# NOTE: We need to be able to disable initialisation of the env_logger to
# have doc-tests right now. This might be a cargo bug! (TODO: check).
#
# As a workaround we keep the dependency on log otherwise we would need
# to fake all the log macros.
default = ["logging"]
logging = ["env_logger"]

[dependencies]
syn = "0.10"
quote = "0.3"
log = "0.3"
env_logger = { version = "0.3", optional = true }
