[package]
name = "derive_builder"
version = "0.3.0"
authors = ["Colin Kiegel <kiegel@gmx.de>",
           "Pascal Hertleif <killercup@gmail.com>",
           "Jan-Erik Rediger <janerik@fnordig.de>"]

description = "Rust macro to automatically implement the builder pattern for arbitrary structs."
repository = "https://github.com/colin-kiegel/rust-derive-builder"
documentation = "https://docs.rs/derive_builder"

license = "MIT/Apache-2.0"
categories = ["development-tools", "rust-patterns"]
keywords = ["derive", "macro", "builder", "setter", "struct"]
readme = "README.md"
build = "build.rs"

[badges]
travis-ci = { repository = "colin-kiegel/rust-derive-builder" }

[lib]
proc-macro = true
name = "derive_builder" # workaround for travis-cargo doc-upload
                        # https://github.com/huonw/travis-cargo/issues/69

[dependencies]
syn = "0.11"
quote = "0.3"
log = "0.3"
env_logger = "0.4"

[build-dependencies]
skeptic = "0.6"
log = "0.3"
env_logger = "0.4"

[dev-dependencies]
skeptic = "0.6"
