[package]
name = "derive_builder"
version = "0.9.0"
authors = ["Colin Kiegel <kiegel@gmx.de>",
           "Pascal Hertleif <killercup@gmail.com>",
           "Jan-Erik Rediger <janerik@fnordig.de>",
           "Ted Driggs <ted.driggs@outlook.com>"]

description = "Rust macro to automatically implement the builder pattern for arbitrary structs."
repository = "https://github.com/colin-kiegel/rust-derive-builder"
documentation = "https://docs.rs/derive_builder/0.9.0"

license = "MIT/Apache-2.0"
categories = ["development-tools", "rust-patterns"]
keywords = ["derive", "macro", "builder", "setter", "struct"]
readme = "README.md"
build = "build/mod.rs"

[badges]
travis-ci = { repository = "colin-kiegel/rust-derive-builder" }

[lib]
proc-macro = true

[features]
logging = [ "log", "env_logger", "derive_builder_core/logging" ]
skeptic_tests = ["skeptic"]
nightlytests = ["compiletest_rs"]

[dependencies]
darling = "0.10.2"
proc-macro2 = "1.0"
quote = "1.0"
log = { version = "0.4", optional = true }
env_logger = { version = "0.5", optional = true }
derive_builder_core = { version = "=0.9.0", path = "../derive_builder_core" }
skeptic = { version = "0.13", optional = true }
compiletest_rs = { version = "0.3.18", optional = true }

[dependencies.syn]
version = "1.0"
features = ["full", "extra-traits"]

[build-dependencies]
skeptic = { version = "0.13", optional = true }
log = { version = "0.4", optional = true }
env_logger = { version = "0.5", optional = true }

[dev-dependencies]
pretty_assertions = "0.6"
