[package]
name = "derive_builder"
version = "0.10.0-alpha"
authors = ["Colin Kiegel <kiegel@gmx.de>",
           "Pascal Hertleif <killercup@gmail.com>",
           "Jan-Erik Rediger <janerik@fnordig.de>",
           "Ted Driggs <ted.driggs@outlook.com>"]

description = "Rust macro to automatically implement the builder pattern for arbitrary structs."
repository = "https://github.com/colin-kiegel/rust-derive-builder"
documentation = "https://docs.rs/derive_builder/0.10.0-alpha"

license = "MIT/Apache-2.0"
categories = ["development-tools", "rust-patterns"]
keywords = ["derive", "macro", "builder", "setter", "struct"]
readme = "README.md"
build = "build/mod.rs"

[badges]
travis-ci = { repository = "colin-kiegel/rust-derive-builder" }

[features]
default = ["std"]
std = []
skeptic_tests = ["skeptic", "derive_builder_macro/skeptic_tests", "derive_builder_core/skeptic_tests"]
clippy = ["derive_builder_macro/clippy", "derive_builder_core/clippy"]

[dependencies]
derive_builder_macro = { version = "=0.10.0-alpha", path = "../derive_builder_macro" }
derive_builder_core = { version = "=0.10.0-alpha", path = "../derive_builder_core" }

[dev-dependencies]
pretty_assertions = "0.6"
skeptic = "0.13"
rustversion = "1"
trybuild = "1"

[build-dependencies]
skeptic = { version = "0.13", optional = true }
