[package]
name = "derive_builder_core"
version = "0.10.0-alpha"
authors = ["Colin Kiegel <kiegel@gmx.de>",
           "Pascal Hertleif <killercup@gmail.com>",
           "Jan-Erik Rediger <janerik@fnordig.de>",
           "Ted Driggs <ted.driggs@outlook.com>"]

description = "Internal helper library for the derive_builder crate."
repository = "https://github.com/colin-kiegel/rust-derive-builder"
documentation = "https://docs.rs/derive_builder_core"

license = "MIT/Apache-2.0"
readme = "README.md"

build = "build/mod.rs"

[features]
clippy = []
skeptic_tests = ["skeptic"]

[badges]
travis-ci = { repository = "colin-kiegel/rust-derive-builder" }

[dependencies]
darling = "0.10.2"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }

[dev-dependencies]
pretty_assertions = "0.6"

[build-dependencies]
skeptic = { version = "0.13", optional = true }
