[package]
name = "derive_builder_core"
version = "0.10.2"
authors = ["Colin Kiegel <kiegel@gmx.de>",
           "Pascal Hertleif <killercup@gmail.com>",
           "Jan-Erik Rediger <janerik@fnordig.de>",
           "Ted Driggs <ted.driggs@outlook.com>"]

description = "Internal helper library for the derive_builder crate."
repository = "https://github.com/colin-kiegel/rust-derive-builder"
documentation = "https://docs.rs/derive_builder_core"

license = "MIT/Apache-2.0"
readme = "README.md"

[features]
clippy = []

[dependencies]
darling = "0.12.0"
proc-macro2 = "1.0.24"
quote = "1.0.8"
syn = { version = "1.0.69", features = ["full", "extra-traits"] }

[dev-dependencies]
pretty_assertions = "0.6.1"
