[package]
name = "derive_builder_macro"
version = "0.10.0-alpha"
authors = ["Colin Kiegel <kiegel@gmx.de>",
           "Pascal Hertleif <killercup@gmail.com>",
           "Jan-Erik Rediger <janerik@fnordig.de>",
           "Ted Driggs <ted.driggs@outlook.com>"]

description = "Rust macro to automatically implement the builder pattern for arbitrary structs."
repository = "https://github.com/colin-kiegel/rust-derive-builder"
documentation = "https://docs.rs/derive_builder_macro/0.10.0-alpha"

license = "MIT/Apache-2.0"
categories = ["development-tools", "rust-patterns"]
keywords = ["derive", "macro", "builder", "setter", "struct"]
readme = "README.md"

[badges]
travis-ci = { repository = "colin-kiegel/rust-derive-builder" }

[lib]
proc-macro = true

[features]
clippy = ["derive_builder_core/clippy"]
skeptic_tests = ["derive_builder_core/skeptic_tests"]

[dependencies]
syn = { version = "1", features = ["full", "extra-traits"] }
derive_builder_core = { version = "=0.10.0-alpha", path = "../derive_builder_core" }
