[package]
name = "derive_builder_macro"
version = "0.10.2"
authors = ["Colin Kiegel <kiegel@gmx.de>",
           "Pascal Hertleif <killercup@gmail.com>",
           "Jan-Erik Rediger <janerik@fnordig.de>",
           "Ted Driggs <ted.driggs@outlook.com>"]

description = "Rust macro to automatically implement the builder pattern for arbitrary structs."
repository = "https://github.com/colin-kiegel/rust-derive-builder"
documentation = "https://docs.rs/derive_builder_macro/0.10.2"

license = "MIT/Apache-2.0"
categories = ["development-tools", "rust-patterns"]
keywords = ["derive", "macro", "builder", "setter", "struct"]
readme = "README.md"

[lib]
proc-macro = true

[features]
clippy = ["derive_builder_core/clippy"]

[dependencies]
syn = { version = "1.0.58", features = ["full", "extra-traits"] }
derive_builder_core = { version = "=0.10.2", path = "../derive_builder_core" }
