[package]
name = "derive_builder_no_std_tests"
version = "0.1.0"
authors = ["Andrey Kutejko <andy128k@gmail.com>"]
edition = "2018"
publish = false

[features]
clippy = ["derive_builder/clippy"]

[dependencies]
derive_builder = { path = "../derive_builder", default-features = false, features = ["alloc"] }
