[package]
name = "derive_builder_test"
version = "0.1.0"
authors = ["Colin Kiegel <kiegel@gmx.de>"]
license = "MIT/Apache-2.0"
publish = false

[lib]
path = "src/lib.rs"

[features]
compiletests = ["compiletest_rs"]
logging = [ "derive_builder/logging" ]
struct_default = [ "derive_builder/struct_default" ]

[dependencies]
derive_builder = { path = "../derive_builder", features = ["skeptic_tests"] }
compiletest_rs = { version = "0.2", optional = true }
