[package]
name = "derive_builder_testsuite"
version = "0.1.0"
authors = ["Colin Kiegel <kiegel@gmx.de>",
           "Pascal Hertleif <killercup@gmail.com>",
           "Jan-Erik Rediger <janerik@fnordig.de>",
           "Ted Driggs <ted.driggs@outlook.com>"]
license = "MIT/Apache-2.0"

publish = false
build = "build/mod.rs"

[features]

default = ["derive_builder/logging"]
struct_default = ["derive_builder/struct_default"]
private_fields = ["derive_builder/private_fields"]
skeptic_tests = ["skeptic"]
nightlytests = ["derive_builder_testsuite_no_std/nightlytests",
                "compiletest_rs"]

[dependencies]
derive_builder = { version = "0.4", path = "../derive_builder" }
derive_builder_testsuite_no_std = { version = "0.1", path = "no_std", optional = true }
skeptic = { version = "0.9", optional = true }
compiletest_rs = { version = "0.2", optional = true }

[build-dependencies]
skeptic = { version = "0.9", optional = true }

[dev-dependencies]
pretty_assertions = "0.1"
