[package]
name = "derive_builder_dummy_crate"
version = "0.1.0"
authors = ["Colin Kiegel <kiegel@gmx.de>"]
description = "This dummy crate serves as a playground to **manually** inspect things like generated documentation. It is **not** tested automatically."
license = "MIT OR Apache-2.0"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
derive_builder = { path = "../../" }
